# mldetection_data_analysis

./: .gitignore  README.md  data_analysis.ipynb  data_analysis.md  master_data.csv  master_data_for_analysis.csv  pyproject.toml  script.py  statistical_test_results.csv  summary_statistics.csv
data/: black human.csv  black screw AI.csv  long screw AI.csv  long screw human.csv  nail AI.csv  nail human.csv  nut AI.csv  nut human.csv  rivet human.csv  rivet screw AI.csv  tek-screw AI.csv  tek-screw human.csv  washer AI.csv  washer human.csv
