[project]
name = "mldetection-data-analysis"
version = "1"
description = ""
authors = [
    {name = "erwincarlogonzales",email = "erwincarlogonzales@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
